force-app/main/default/objects/Fielo_Cropping__c/Fielo_Cropping__c.object-meta.xml
<CustomObject>
    <label>Cropping</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cropping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Croppings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>