force-app/main/default/objects/Fielo_Cropping__c/fields/Crop_Category__c.field-meta.xml
<CustomField>
    <fullName>Crop_Category__c</fullName>
    <label>Crop Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Artichoke</fullName>
            </value>
            <value>
                <fullName>Asparagus</fullName>
            </value>
            <value>
                <fullName>Barley</fullName>
            </value>
            <value>
                <fullName>Bean</fullName>
            </value>
            <value>
                <fullName>Beet</fullName>
            </value>
            <value>
                <fullName>Borecole</fullName>
            </value>
            <value>
                <fullName>Brassicae</fullName>
            </value>
            <value>
                <fullName>Broad Beans</fullName>
            </value>
            <value>
                <fullName>Broccoli</fullName>
            </value>
            <value>
                <fullName>Brussels Sprouts</fullName>
            </value>
            <value>
                <fullName>Bulbs</fullName>
            </value>
            <value>
                <fullName>Cabbage</fullName>
            </value>
            <value>
                <fullName>Calabrese</fullName>
            </value>
            <value>
                <fullName>Capsicum</fullName>
            </value>
            <value>
                <fullName>Carrots</fullName>
            </value>
            <value>
                <fullName>Cauliflower</fullName>
            </value>
            <value>
                <fullName>Celery</fullName>
            </value>
            <value>
                <fullName>Cereal</fullName>
            </value>
            <value>
                <fullName>Cereals</fullName>
            </value>
            <value>
                <fullName>Courgettes</fullName>
            </value>
            <value>
                <fullName>Cucumber</fullName>
            </value>
            <value>
                <fullName>Cutflowers</fullName>
            </value>
            <value>
                <fullName>Durum Wheat</fullName>
            </value>
            <value>
                <fullName>Dwarf French Beans</fullName>
            </value>
            <value>
                <fullName>Eggplant</fullName>
            </value>
            <value>
                <fullName>Endive</fullName>
            </value>
            <value>
                <fullName>Fruit</fullName>
            </value>
            <value>
                <fullName>Fruiting Veg</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>