force-app/main/default/objects/Fielo_Cropping__c/fields/Total_Seed_Potential__c.field-meta.xml
<CustomField>
    <fullName>Total_Seed_Potential__c</fullName>
    <label>Total Seed Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>