force-app/main/default/objects/Fielo_Cropping__c/fields/Yearly_Crop__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Crop__c</fullName>
    <label>Yearly Crop</label>
    <referenceTo>Fielo_Yearly_Crop__c</referenceTo>
    <relationshipLabel>Croppings</relationshipLabel>
    <relationshipName>Croppings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>